src/snapshots/tat__tat__test__render_table-4.snap
---
source: src/tat.rs
expression: terminal.backend()
---
"                                               point                                               ▲"
"                                                                                                   █"
"Feature   │geom                                         field                                      █"
"1         │POINT (0 0)                                  NULL                                       █"
"2         │POINT (1 0)                                  NULL                                       █"
"3         │POINT (1 1)                                  NULL                                       █"
"4         │POIN                                                                                    █"
"          │     ╭────────────────── Feature 1 - Value of "geom" ───────────────────╮               █"
"          │     │POINT (0 0)                                                       │               █"
"          │     │                                                                  │               █"
"          │     │                                                                  │               █"
"          │     │                                                                  │               █"
"          │     │                                                                  │               █"
"          │     │                                                                  │               █"
"          │     │                                                                  │               █"
"          │     │                                                                  │               █"
"          │     │                                                                  │               █"
"          │     │                                                                  │               █"
"          │     │                                                                  │               █"
"          │     │                                                                  │               █"
"          │     │                                                                  │               █"
"          │     │                                                                  │               █"
"          │     │                                                                  │               █"
"          │     │                                                                  │               █"
"          │     │                                                                  │               █"
"          │     │                                                                  │               █"
"          │     │                                                                  │               █"
"          │     │                                                                  │               █"
"          │     │                                                                  │               █"
"          │     │                                                                  │               █"
"          │     │                                                                  │               █"
"          │     │                                                                  │               █"
"          │     ╰─────────────────────── <press q to close> ───────────────────────╯               █"
"          │                                                                                        █"
"          │                                                                                        █"
"          │                                                                                        █"
"          │                                                                                        █"
"          │                                                                                        █"
"────────────────────────────────────── <type ? to show help> ──────────────────────────────────────▼"
"◄██████████████████████████████████████████████████████████████████████████████████████████████████►"
